<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark_color">

    <!--内容布局部分-->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".MainActivity">

        <include layout="@layout/toolbar"/>

        <!--toolbar下方的导航-->
        <LinearLayout
            android:id="@+id/tabLayout"
            android:background="@color/primary_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tab_1"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tab_1"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_tab_2"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tab_2"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_tab_3"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tab_3"
                android:textSize="16sp"/>
        </LinearLayout>

        <!--导航下方的滑动条-->
        <LinearLayout
            android:id="@+id/draw_slip_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/primary_color">
            <View
                android:id="@+id/draw_slip"
                android:layout_width="120dp"
                android:layout_height="2dp"
                android:background="@color/white"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_material_light">

            </android.support.v4.view.ViewPager>
            <!--toolbar下方阴影-->
            <View
                android:layout_width="match_parent"
                android:background="@drawable/shadow"
                android:layout_height="2dp"/>

        </RelativeLayout>
    </LinearLayout>

    <!--抽屉布局部分-->
    <include layout="@layout/layout_drawer_left"/>
</android.support.v4.widget.DrawerLayout>
